BUGFIX: Allow horizontal scroll in the collection tree

--- a/Resources/Private/JavaScript/asset-collections/src/components/AssetCollectionTree.module.css
+++ b/Resources/Private/JavaScript/asset-collections/src/components/AssetCollectionTree.module.css
@@ -9,4 +9,6 @@
 }
 .tree {
     border-top: 1px solid var(--theme-colors-border);
+    overflow: auto;
 }
+
