--- a/Resources/Private/JavaScript/core/src/components/Column.module.css
+++ b/Resources/Private/JavaScript/core/src/components/Column.module.css
@@ -1,6 +1,7 @@
 .column {
     display: grid;
     grid-auto-rows: minmax(min-content, max-content);
+    grid-template-columns: 100%;
     grid-gap: var(--theme-spacing-Full);
     overflow-y: auto;
     overflow-x: hidden;
